test and cleanup

--- a/index.html
+++ b/index.html
@@ -1,29 +1,37 @@
 ---
 layout: default
-title: "Ed."
+title: "_pi_'s blog"
 ---
 <div class="introduction">
-  <h1>hi.</h1>
+  <h1>yo.</h1>
 
 <p>
-  Ed is a <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> theme designed for textual
-  editors based on <a href="http://go-dh.github.io/mincomp/">minimal computing principles</a>, and
-  focused on legibility, durability, ease and flexibility. Our underlying technology is easy to
-  learn and teach, and can produce beautifully rendered scholarly or reading editions of texts meant
-  to last. To start using Ed, please see <a href="{{ site.baseurl }}/documentation/">our
-  documentation</a> for installation instructions and more. To learn more about the ideas behind Ed
-  and a list of current features see our <a href="{{ site.baseurl }}/about/">about</a> section. To
-  see Ed in action, we've provided some sample minimal editions for you below.
+  Welcome to my blog. I might put some text for you to pass through your
+  eyeballs in the future. I'm not the best writer, but I'll try to make it worth
+  your brain-strain to parse my ramblings.
+
+  Might contain trace elements of a lot of rants and vents of frustration,
+  written by none other than me, the great **\_pi\_**, ruler of the underworld
+  of cursed technology, broken IT and Austrian cuisine.
+
+  Some stuff I write here might be exaggerated for comedic^Wdramatic effect. The
+  above is 100% true though. Trust me, I have a degree in Celsius.
+
+  Social stuff:
+  <ul>
+    Discord: pi#4219
+    VRChat: _pi_
+    <a href="https://pimaker.at" target="_blank">Website</a>
+  </ul>
 </p>
 </div>
 
 <hr>
 
 <div class="toc">
-  <h2>sample texts</h2>
+  <h2>entries</h2>
   <ul class="texts">
   {% for item in site.texts %}
-
     <li class="text-title">
       <a href="{{ site.baseurl }}{{ item.url }}">
         {{ item.title }}
