--- a/index.html
+++ b/index.html
@@ -9,19 +9,25 @@ title: "_pi_'s blog"
   Welcome to my blog. I might put some text for you to pass through your
   eyeballs in the future. I'm not the best writer, but I'll try to make it worth
   your brain-strain to parse my ramblings.
+</p>
 
+<p>
   Might contain trace elements of a lot of rants and vents of frustration,
-  written by none other than me, the great **\_pi\_**, ruler of the underworld
+  written by none other than me, the great <b>_pi_</b>, ruler of the underworld
   of cursed technology, broken IT and Austrian cuisine.
+</p>
 
+<p>
   Some stuff I write here might be exaggerated for comedic^Wdramatic effect. The
   above is 100% true though. Trust me, I have a degree in Celsius.
+</p>
 
+<p>
   Social stuff:
   <ul>
-    Discord: pi#4219
-    VRChat: _pi_
-    <a href="https://pimaker.at" target="_blank">Website</a>
+    <li>Discord: pi#4219
+    <li>VRChat: _pi_
+    <li><a href="https://pimaker.at" target="_blank">Website</a>
   </ul>
 </p>
 </div>
