--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: "_pi_'s blog"
   <h1>yo</h1>
 
 <p>
-  Welcome to my blog. I might put some text for you to pass through your
+  Welcome to my blog. I might put some text here for you to pass through your
   eyeballs in the future. I'm not the best writer, but I'll try to make it worth
   your brain-strain to parse my ramblings.
 </p>
